[package]
name = "honeybadger"
description = "Honeybadger Notifier for Rust"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
build = "build.rs"

homepage = "https://github.com/qnighy/honeybadger-rs"
repository = "https://github.com/qnighy/honeybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
lazy_static = "1.2.0"
scoped-tls = "0.1.0"
rand = "0.6.0"
uuid = { version = "0.7.2", features = ["serde"] }
chrono = "0.4.0"
serde = "1.0.56"
serde_derive = "1.0.59"
serde_json = "1.0.3"
failure_derive = "0.1.1"  # Align minimal version
failure = "0.1.1"
reqwest = "0.9.0"
rustc_version_runtime = "0.1.3"

[workspace]

members = [
  "honeybadger-rocket",
  "honeybadger-gotham",
  "honeybadger-actix-web",
]
