[package]
name = "mightybadger"
description = "Honeybadger Notifier for Rust"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"
build = "build.rs"

homepage = "https://github.com/qnighy/mightybadger-rs"
repository = "https://github.com/qnighy/mightybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
lazy_static = "1.2.0"
scoped-tls = "1.0.0"
rand = "0.8.0"
uuid = { version = "0.8.0", features = ["serde"] }
chrono = "0.4.0"
serde = "1.0.56"
serde_derive = "1.0.59"
serde_json = "1.0.3"
failure = "0.1.5"
attohttpc = { version = "0.24.1", features = ["json"] }
rustc_version_runtime = "0.2.0"

[dev-dependencies]
mightybadger-test-server = { path = "mightybadger-test-server" }

[workspace]
members = [
    ".",
    "mightybadger-test-server",
]
