[package]
name = "honeybadger-actix-web"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]

[dependencies]
actix-web = { version = "0.6.12", default-features = false }
honeybadger = { path = ".." }
failure = "0.1.1"

[dev-dependencies]
actix-web = { version = "0.6.12", default-features = true }
