[package]
name = "honeybadger-gotham"
description = "Honeybadger Notifier for Rust, middleware for Gotham"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]

homepage = "https://github.com/qnighy/honeybadger-rs"
repository = "https://github.com/qnighy/honeybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger", "gotham"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
scoped-tls = "0.1.1"
futures = "0.1"
hyper = "0.11"
gotham = "0.2.1"
gotham_derive = "0.2.1"
honeybadger = { path = ".." }
