[package]
name = "mightybadger-actix-web"
description = "Honeybadger Notifier for Rust, middleware for Actix Web"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

homepage = "https://github.com/qnighy/mightybadger-rs"
repository = "https://github.com/qnighy/mightybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger", "actix-web"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
futures = { version = "0.1.27" }
actix-web = { version = "1.0.3", default-features = false }
mightybadger = { path = ".." }
failure = "0.1.5"
serde_urlencoded = "0.6.1"

[dev-dependencies]
actix-web = { version = "1.0.3", default-features = true }
