[package]
name = "mightybadger-test-server"
description = "Test server for mightybadger-rs"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

homepage = "https://github.com/qnighy/mightybadger-rs"
repository = "https://github.com/qnighy/mightybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
uuid = { version = "0.8.0", features = ["serde", "v4"] }
serde = { version = "1.0.56", features = ["derive"] }
serde_json = "1.0.3"
futures = "0.3.1"
tokio = { version = "0.3.3", features = ["rt-core", "io-driver"] }
hyper = "0.13.1"
